--- a/src/assets/scss/layout/_navigation.scss
+++ b/src/assets/scss/layout/_navigation.scss
@@ -223,14 +223,7 @@
 		}
 
 		@keyframes fadeAndResize {
-		0% {
-			opacity: 1;
-		}
-		40% {
-			opacity: 0;
-		}
 		100% {
-			opacity: 0;
 			width: 0px;
 			height: 0px;
 		}
